fixed spacing in header and profile elements

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -7,10 +7,9 @@
 
 @media screen and (max-width: 880px) {
     .header {
-        height: 56px;
         max-width: 100vw;
         margin:  28px 0 0 0;
-        padding: 0;
+        padding: 0 0 28px 0;
         display: block;
     }
 
