--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -77,21 +77,20 @@
 
 @media screen and (max-width: 880px) {
     .profile {
-        max-width: 282px;
-        margin: 0 auto;
         flex-direction: column;
+        padding: 0;
     }
 
     .profile__info {
-        grid-gap: 5px;
+        grid-template-columns: 12fr 1fr;
+        grid-gap: 0;
     }
 
     .profile__avatar {
-        margin: 5% auto 8% auto;
+        margin: 36px 0;
     }
 
     .profile__title {
-        font-weight: 500;
         font-size: 22px;
         text-align: center;
         line-height: 26px;
@@ -100,10 +99,10 @@
     .profile__description {
         font-size: 14px;
         text-align: center;
+        padding-top: 6px;
     }
 
     .profile__add-button {
-        margin: 9% auto;
         width: 100%;
         height: 50px;
     }
